# unav-coupon-recommendation-system

./: Makefile  README.md  environment.yml  pyproject.toml  test.txt
notebooks/: data-cleaning-and-prep.ipynb
sistema_de_recomendación_de_cupones_para_conductores/: __init__.py  dataset.py  features.py  plots.py
sistema_de_recomendación_de_cupones_para_conductores/modeling/: predict.py  train.py
