[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sistema_de_recomendaci\u00f3n_de_cupones_para_conductores"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Alzate Moreno, Garc\u00eda Garc\u00eda, Barros Ru\u00edz, Infante, Ca\u00f1ada Mart\u00ednez, Garc\u00eda P\u00e1ramo, Mart\u00edn Ruiz" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.1"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["sistema_de_recomendación_de_cupones_para_conductores"]
force_sort_within_sections = true
